fix read grid wrapping

--- a/web/pdf_reader.css
+++ b/web/pdf_reader.css
@@ -48,7 +48,7 @@ body.nightMode.siac-reading-modal-displayed #siac-right-side {
     box-sizing: border-box;
     white-space: normal;
     line-height: 1.2em;
-    width: 365px;
+    width: 375px;
     background: #353535;
 }
 .siac-link-btn.tab {
